[gd_scene load_steps=21 format=3 uid="uid://drix1iy7m7yh"]

[ext_resource type="Script" uid="uid://dkvorhs4h60e5" path="res://examples/src/state/animation observer test/character_2d.gd" id="1_1xxgx"]
[ext_resource type="Script" uid="uid://c2gf3lngt37nl" path="res://addons/fray/src/hit/2d/hit_state_manager_2d.gd" id="2_5ku7u"]
[ext_resource type="Script" uid="uid://coyheirpdxili" path="res://addons/fray/src/hit/2d/hit_state_2d.gd" id="3_o12hm"]
[ext_resource type="Script" uid="uid://bm7ks4fjcaih5" path="res://addons/fray/src/hit/2d/hitbox_2d.gd" id="4_koasv"]
[ext_resource type="Script" uid="uid://jtnxpcki81mm" path="res://examples/src/hit/2d/hitbox/hitbox_attributes_test.gd" id="5_5ixgr"]
[ext_resource type="Script" uid="uid://b7knkovok4fgq" path="res://addons/fray/src/hit/hitbox_attribute.gd" id="6_an7i7"]
[ext_resource type="Script" uid="uid://b3gmlxnylig8s" path="res://addons/fray/src/state_mgmt/state_machine.gd" id="6_fli34"]
[ext_resource type="Script" uid="uid://dtf6n6jtde31t" path="res://addons/fray/src/state_mgmt/component/buffered_input_advancer.gd" id="7_7bmj0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_75gqh"]
size = Vector2(1149, 20)

[sub_resource type="Gradient" id="Gradient_t1a0b"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_b158g"]
gradient = SubResource("Gradient_t1a0b")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_67yu2"]
size = Vector2(66, 63)

[sub_resource type="Resource" id="Resource_mqvyf"]
script = ExtResource("5_5ixgr")
color = Color(0, 0, 0, 1)
damage = 50
metadata/_custom_type_script = "uid://jtnxpcki81mm"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2skky"]
size = Vector2(34, 32)

[sub_resource type="Resource" id="Resource_gfaap"]
script = ExtResource("5_5ixgr")
color = Color(0, 0, 0, 1)
damage = 25
metadata/_custom_type_script = "uid://jtnxpcki81mm"

[sub_resource type="Resource" id="Resource_dyeb5"]
script = ExtResource("5_5ixgr")
color = Color(0, 0, 0, 1)
damage = 6
metadata/_custom_type_script = "uid://jtnxpcki81mm"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uc2pl"]
size = Vector2(166, 20)

[sub_resource type="Resource" id="Resource_f5e5s"]
script = ExtResource("6_an7i7")
metadata/_custom_type_script = "uid://dr2m3vbd0ydct"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2adbt"]
size = Vector2(75, 67)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ctmm2"]
size = Vector2(63, 57)

[node name="TestingHitboxState2d" type="CanvasLayer"]

[node name="ground" type="StaticBody2D" parent="."]
position = Vector2(623, 635)

[node name="CollisionShape2D" type="CollisionShape2D" parent="ground"]
position = Vector2(-45.5, 0)
shape = SubResource("RectangleShape2D_75gqh")

[node name="left wall" type="StaticBody2D" parent="."]
position = Vector2(623, 635)

[node name="CollisionShape2D" type="CollisionShape2D" parent="left wall"]
position = Vector2(-619, -384)
rotation = -1.5708
shape = SubResource("RectangleShape2D_75gqh")

[node name="right wall" type="StaticBody2D" parent="."]
position = Vector2(1762, 635)

[node name="CollisionShape2D" type="CollisionShape2D" parent="right wall"]
position = Vector2(-619, -384)
rotation = -1.5708
shape = SubResource("RectangleShape2D_75gqh")

[node name="Character2d" type="CharacterBody2D" parent="."]
position = Vector2(166, 490)
script = ExtResource("1_1xxgx")

[node name="Sprite2D" type="Sprite2D" parent="Character2d"]
texture = SubResource("GradientTexture2D_b158g")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Character2d"]
position = Vector2(1, 0.5)
shape = SubResource("RectangleShape2D_67yu2")

[node name="FrayHitStateManager2D" type="Node2D" parent="Character2d" node_paths=PackedStringArray("source")]
script = ExtResource("2_5ku7u")
source = NodePath("..")

[node name="236p" type="Node2D" parent="Character2d/FrayHitStateManager2D" node_paths=PackedStringArray("source")]
visible = false
script = ExtResource("3_o12hm")
source = NodePath("../..")
active_hitboxes = 0
metadata/_editor_prop_ptr_source = NodePath("../..")

[node name="FrayHitbox2D" type="Area2D" parent="Character2d/FrayHitStateManager2D/236p"]
visible = false
monitoring = false
monitorable = false
script = ExtResource("4_koasv")
attribute = SubResource("Resource_mqvyf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Character2d/FrayHitStateManager2D/236p/FrayHitbox2D"]
position = Vector2(59, -1)
shape = SubResource("RectangleShape2D_2skky")
debug_color = Color(1, 0, 0, 0.5)

[node name="214p" type="Node2D" parent="Character2d/FrayHitStateManager2D" node_paths=PackedStringArray("source")]
visible = false
position = Vector2(116, -38)
script = ExtResource("3_o12hm")
source = NodePath("../..")
active_hitboxes = 0
metadata/_editor_prop_ptr_source = NodePath("../..")

[node name="FrayHitbox2D" type="Area2D" parent="Character2d/FrayHitStateManager2D/214p"]
visible = false
monitoring = false
monitorable = false
script = ExtResource("4_koasv")
attribute = SubResource("Resource_gfaap")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Character2d/FrayHitStateManager2D/214p/FrayHitbox2D"]
position = Vector2(-58, 0)
shape = SubResource("RectangleShape2D_2skky")
debug_color = Color(1, 0, 0, 0.5)

[node name="46charge" type="Node2D" parent="Character2d/FrayHitStateManager2D" node_paths=PackedStringArray("source")]
visible = false
position = Vector2(116, -38)
script = ExtResource("3_o12hm")
source = NodePath("../..")
active_hitboxes = 0
metadata/_editor_prop_ptr_source = NodePath("../..")

[node name="FrayHitbox2D" type="Area2D" parent="Character2d/FrayHitStateManager2D/46charge"]
monitoring = false
monitorable = false
script = ExtResource("4_koasv")
attribute = SubResource("Resource_dyeb5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Character2d/FrayHitStateManager2D/46charge/FrayHitbox2D"]
position = Vector2(13, 35)
shape = SubResource("RectangleShape2D_uc2pl")
debug_color = Color(1, 0, 0, 0.5)

[node name="FrayStateMachine" type="Node" parent="Character2d"]
script = ExtResource("6_fli34")
active = true

[node name="FrayBufferedInputAdvancer" type="Node" parent="Character2d/FrayStateMachine"]
script = ExtResource("7_7bmj0")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(623, 577)

[node name="ColorRect" type="ColorRect" parent="StaticBody2D"]
offset_left = -33.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 31.0

[node name="FrayHitbox2D" type="Area2D" parent="StaticBody2D"]
script = ExtResource("4_koasv")
attribute = SubResource("Resource_f5e5s")

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D/FrayHitbox2D"]
position = Vector2(0.5, 0.5)
shape = SubResource("RectangleShape2D_2adbt")
debug_color = Color(0, 0, 0, 0.5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(1.5, 3.5)
shape = SubResource("RectangleShape2D_ctmm2")

[connection signal="hitbox_intersected" from="Character2d/FrayHitStateManager2D" to="Character2d" method="_on_fray_hit_state_manager_2d_hitbox_intersected"]
